package parser;

/**
 * Enum representing all possible command types.
 */
public enum CommandType {
    ADD, LIST, DELETE, EDIT, FILTER, SORT, SEARCH, STATUS, TAG, HELP, BYE, UNKNOWN
}